# msu_computer_graphics_spring_2020

./: .gitignore
Ray tracing/: CMakeLists.txt  a.out  main.cpp  out.ppm  out1.ppm  readme.md
